attempt at fixing squished cities

--- a/assets/css/company.css
+++ b/assets/css/company.css
@@ -186,6 +186,7 @@
 
 .cities-row img {
   width: 20%;
+  height: auto;
 }
 
 .leadership-heading {
